--- a/php/Squadrapp/application/layouts/scripts/application.phtml
+++ b/php/Squadrapp/application/layouts/scripts/application.phtml
@@ -123,7 +123,7 @@
 	<div id="squadrapp">
 		<div id="header">
             <div class="squadrapp_canvas">
-                <div id="logo"><a href="<?php echo $this->baseUrl("/"); ?>" onClick="_gaq.push (['_trackEvent' ,'Home' ,'goHome' ,'Logo_Header']);"><img src="<?php echo $this->baseUrl("/img/logo.png"); ?>">&nbsp;</a><span style="font-size:10px; color:#fff;">Desarrollo</span></div><div style="color:#FFF; padding:10px; font-size:16px; font-weight:bold;">TEST</div>
+                <div id="logo"><a href="<?php echo $this->baseUrl("/"); ?>" onClick="_gaq.push (['_trackEvent' ,'Home' ,'goHome' ,'Logo_Header']);"><img src="<?php echo $this->baseUrl("/img/logo.png"); ?>">&nbsp;</a><span style="font-size:10px; color:#fff; position:absolute; top:0; left:0;">Desarrollo</span></div><div style="color:#FFF; padding:10px; font-size:16px; font-weight:bold;">TEST</div>
                 <div id="nav">
                 <?php ///*?>
                 	<div class="search" style="display:none;">
